fix: video card invisible issue

--- a/src/components/video-card/VideoCard.module.css
+++ b/src/components/video-card/VideoCard.module.css
@@ -13,7 +13,7 @@
     rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
 }
 .videoCard:hover {
-  opacity: 80%;
+  opacity: 0.8;
   cursor: pointer;
 }
 .thumbnail {
